spacing fixes

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -8,6 +8,7 @@
     DO -NOT- PUT STYLES INTO THE CSS FILE. USE SCSS FILE.
         - make sure to install extension (i use Live Sass Compiler in vscode) that allows you to automatically match sass/scss to css
         - also, NEVER EVER USE INLINE STYLES (styling in the html) <-- BAD PRACTICE
+            - ex. style="margin-bottom: 30px;"
 
     WHEN CREATING A NEW PAGE, USE template.html
         - make sure to change:
@@ -213,9 +214,9 @@ $dark-grey: #767676;
 
 .question {
     margin-bottom: 30px;
+    font-size: 1.1em;
 
-    p, li {
-        font-size: 1.1em;
+    p {
         margin-bottom: 20px;
     }
 
@@ -540,6 +541,7 @@ button.collapsible h2 {
 
     p, ul li {
         line-height: 1.8em;
+        margin-left: 0.5rem;
     }
 }
 
@@ -595,6 +597,10 @@ button[type=submit] {
         background-color: $yellow;
         color: black;
     }
+}
+
+iframe {
+    margin-bottom: 30px;
 }
 
 footer {
@@ -1666,7 +1672,7 @@ footer {
         }
 
         iframe {
-            margin: 120px 0 30px;
+            margin-top: 120px;
         }
     }
     
